<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="signUpVM" type="com.application.app.modules.signup.data.viewmodel.SignUpVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup130"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStyleindigo_900">
        <ScrollView android:clipToPadding="false"
            android:fillViewport="true"
            android:id="@+id/scrollViewScrollview"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_2pxv"
            android:layout_width="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintGroup113"
                android:layout_height="wrap_content" android:layout_width="match_parent">
                <ImageView android:id="@+id/imageVector4"
                    android:layout_height="@dimen/_327pxh"
                    android:layout_width="465dp" android:scaleType="fitXY"
                    android:src="@drawable/img_vector4"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                <TextView android:id="@+id/txtCreateYourAcc"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_112pxv"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_8pxh"
                    android:layout_width="wrap_content"
                    android:translationX="@dimen/_20pxh"
                    android:translationY="-2dp"
                    android:text="@{signUpVM.signUpModel.txtCreateYourAcc}"
                    app:layout_constraintBottom_toBottomOf="@+id/imageVector4"
                    app:layout_constraintEnd_toStartOf="@+id/imageYoundmanstand"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="@+id/txtSignUp1"
                    app:layout_constraintTop_toBottomOf="@+id/txtSignUp1"
                    style="@style/txtInterregular16" tools:text="@string/msg_create_your_acc"/>
                <View
                    android:background="@drawable/rectangle_bg_bluegray_800_radius_78_5"
                    android:id="@+id/viewEllipse4"
                    android:layout_height="@dimen/_157pxv"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="@dimen/_157pxv"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtSignUp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@+id/txtSignUp"/>
                <ImageView android:id="@+id/imageRectangle2"
                    android:layout_height="@dimen/_59pxh"
                    android:layout_marginEnd="@dimen/_117pxh"
                    android:layout_marginStart="@dimen/_116pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="@dimen/_181pxh"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="@+id/imageVector4"
                    app:layout_constraintStart_toStartOf="@+id/imageVector4"
                    app:layout_constraintTop_toTopOf="@+id/imageVector4"
                    imageRes="@{@drawable/img_rectangle2_1}" tools:src="@drawable/img_rectangle2_1"/>
                <View
                    android:background="@drawable/rectangle_bg_bluegray_800_radius_27_5"
                    android:id="@+id/viewEllipse1"
                    android:layout_height="@dimen/_55pxv"
                    android:layout_marginEnd="@dimen/_166pxh"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_12pxv"
                    android:layout_width="@dimen/_57pxh"
                    app:layout_constraintEnd_toStartOf="@+id/imageYoundmanstand"
                    app:layout_constraintHorizontal_bias="0.13"
                    app:layout_constraintStart_toStartOf="@+id/viewRectangle3" app:layout_constraintTop_toTopOf="@+id/txtEmail"/>
                <View
                    android:background="@drawable/rectangle_bg_bluegray_800_radius_40_5"
                    android:id="@+id/viewEllipse6"
                    android:layout_height="@dimen/_81pxv"
                    android:layout_marginEnd="@dimen/_33pxh"
                    android:layout_marginTop="@dimen/_3pxv"
                    android:layout_width="@dimen/_84pxh"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.58"
                    app:layout_constraintStart_toEndOf="@+id/viewEllipse9" app:layout_constraintTop_toBottomOf="@+id/viewEllipse1"/>
                <View
                    android:background="@drawable/rectangle_bg_bluegray_800_radius_38"
                    android:id="@+id/viewEllipse7"
                    android:layout_height="@dimen/_76pxh"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginEnd="@dimen/_46pxh"
                    android:layout_marginTop="@dimen/_2pxv"
                    android:layout_width="@dimen/_76pxh"
                    app:layout_constraintBottom_toBottomOf="@+id/imageRectangle3"
                    app:layout_constraintEnd_toEndOf="@+id/imageRectangle3"
                    app:layout_constraintHorizontal_bias="0.26"
                    app:layout_constraintStart_toEndOf="@+id/viewEllipse4" app:layout_constraintTop_toTopOf="@+id/viewEllipse8"/>
                <View
                    android:background="@drawable/rectangle_bg_bluegray_800_radius_39"
                    android:id="@+id/viewEllipse8"
                    android:layout_height="@dimen/_78pxv"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginTop="@dimen/_24pxv"
                    android:layout_width="@dimen/_78pxv"
                    app:layout_constraintBottom_toBottomOf="@+id/imageRectangle3"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/viewRectangle5" app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswor"/>
                <View
                    android:background="@drawable/rectangle_bg_bluegray_800_radius_14_5"
                    android:id="@+id/viewEllipse9"
                    android:layout_height="@dimen/_29pxh"
                    android:layout_marginEnd="@dimen/_75pxh"
                    android:layout_marginStart="@dimen/_63pxh"
                    android:layout_width="@dimen/_29pxh"
                    app:layout_constraintEnd_toEndOf="@+id/txtConfirmPasswor"
                    app:layout_constraintHorizontal_bias="0.28"
                    app:layout_constraintStart_toStartOf="@+id/txtConfirmPasswor" app:layout_constraintTop_toBottomOf="@+id/viewEllipse6"/>

                <ImageView
                    android:id="@+id/imageYoundmanstand"
                    imageRes="@{@drawable/img_youndmanstand}"
                    android:layout_width="240dp"
                    android:layout_height="355dp"
                    android:scaleType="fitXY"
                    android:translationY="-4dp"
                    tools:layout_editor_absoluteX="251dp"
                    tools:layout_editor_absoluteY="43dp"
                    tools:src="@drawable/img_youndmanstand" />

                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_20"
                    android:id="@+id/viewRectangle3"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_39pxh"
                    android:layout_marginTop="@dimen/_5pxv"
                    android:layout_width="@dimen/_350pxh"
                    app:layout_constraintEnd_toEndOf="@+id/viewEllipse6"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtEmail"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_20"
                    android:id="@+id/viewRectangle4"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:layout_marginStart="@dimen/_39pxh"
                    android:layout_width="@dimen/_350pxh"
                    app:layout_constraintEnd_toEndOf="@+id/viewEllipse6"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtPassword"/>
                <View
                    android:background="@drawable/rectangle_bg_white_a700_radius_20"
                    android:id="@+id/viewRectangle5"
                    android:layout_height="@dimen/_40pxv"
                    android:layout_marginStart="@dimen/_36pxh"
                    android:layout_width="@dimen/_350pxh"
                    app:layout_constraintEnd_toStartOf="@+id/viewEllipse8"
                    app:layout_constraintHorizontal_bias="0.09"
                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/txtConfirmPasswor"/>
                <ImageView android:id="@+id/imageRectangle3"
                    android:layout_height="@dimen/_60pxh"
                    android:layout_marginEnd="@dimen/_40pxh"
                    android:layout_marginStart="@dimen/_113pxh"
                    android:layout_marginTop="@dimen/_22pxv"
                    android:layout_width="@dimen/_213pxh"
                    android:scaleType="fitXY"
                    android:translationY="@dimen/_8pxh"
                    app:layout_constraintEnd_toStartOf="@+id/viewEllipse8"
                    app:layout_constraintHorizontal_bias="0.27"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/viewRectangle5"
                    imageRes="@{@drawable/img_rectangle3}" tools:src="@drawable/img_rectangle3"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignUp"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_4pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:translationY="@dimen/_8pxh"
                    android:text="@{signUpVM.signUpModel.txtSignUp}"
                    app:layout_constraintBottom_toBottomOf="@+id/viewEllipse8"
                    app:layout_constraintEnd_toEndOf="@+id/viewEllipse7"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/viewEllipse4"
                    app:layout_constraintTop_toTopOf="@+id/imageRectangle3"
                    style="@style/txtInterbold28" tools:text="@string/lbl_sign_up"/>

                <TextView
                    android:id="@+id/txtEmail"
                    style="@style/txtBalooregular20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_53pxh"
                    android:layout_marginTop="@dimen/_27pxv"
                    android:layout_marginEnd="@dimen/_7pxh"
                    android:ellipsize="end"
                    android:fontFamily="@font/baloo_bhai"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtEmail}"
                    android:translationX="@dimen/_2pxh"
                    app:layout_constraintEnd_toEndOf="@+id/viewEllipse1"
                    app:layout_constraintHorizontal_bias="0.13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageVector4"
                    tools:text="@string/lbl_email" />

                <TextView
                    android:id="@+id/txtPassword"
                    style="@style/txtBalooregular20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_14pxh"
                    android:layout_marginTop="@dimen/_8pxv"
                    android:layout_marginEnd="@dimen/_154pxh"
                    android:ellipsize="end"
                    android:fontFamily="@font/baloo_bhai"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtPassword}"
                    android:translationX="@dimen/_10pxv"
                    android:translationY="-2dp"
                    app:layout_constraintEnd_toStartOf="@+id/viewEllipse6"
                    app:layout_constraintHorizontal_bias="0.13"
                    app:layout_constraintStart_toStartOf="@+id/viewRectangle4"
                    app:layout_constraintTop_toBottomOf="@+id/viewRectangle3"
                    tools:text="@string/lbl_password" />

                <TextView
                    android:id="@+id/txtConfirmPasswor"
                    style="@style/txtBalooregular20"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_marginEnd="@dimen/_151pxh"
                    android:ellipsize="end"
                    android:fontFamily="@font/baloo_bhai"
                    android:gravity="start"
                    android:singleLine="true"
                    android:text="@{signUpVM.signUpModel.txtConfirmPasswor}"
                    android:translationY="-4dp"
                    app:layout_constraintEnd_toEndOf="@+id/viewRectangle5"
                    app:layout_constraintStart_toStartOf="@+id/viewRectangle5"
                    app:layout_constraintTop_toBottomOf="@+id/viewRectangle4"
                    tools:text="@string/msg_confirm_passwor" />

                <TextView
                    android:id="@+id/txtAlreadyHaveAn"
                    style="@style/txtBalooregular20"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_53pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginBottom="@dimen/_76pxv"
                    android:ellipsize="end"
                    android:fontFamily="@font/baloo_bhai"
                    android:singleLine="true"
                    android:textStyle="italic"
                    android:text="@{signUpVM.signUpModel.txtAlreadyHaveAn}"
                    android:translationY="@dimen/_10pxh"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/txtLogin"
                    app:layout_constraintHorizontal_bias="0.13"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageRectangle3"
                    app:layout_constraintVertical_bias="0.0"
                    tools:text="@string/msg_already_have_an" />

                <TextView
                    android:id="@+id/txtLogin"
                    style="@style/txtBalooregular20_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_marginEnd="@dimen/_63pxh"
                    android:layout_marginBottom="@dimen/_76pxv"
                    android:ellipsize="end"
                    android:fontFamily="@font/baloo_bhai"
                    android:singleLine="true"
                    android:textStyle="italic"
                    android:text="@{signUpVM.signUpModel.txtLogin}"
                    android:translationX="-6dp"
                    android:translationY="@dimen/_10pxh"
                    app:layout_constraintBaseline_toBaselineOf="@+id/txtAlreadyHaveAn"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.12"
                    app:layout_constraintStart_toEndOf="@+id/txtAlreadyHaveAn"
                    app:layout_constraintTop_toBottomOf="@+id/imageRectangle3"
                    tools:text="@string/lbl_login" />
                <TextView android:ellipsize="end"
                    android:id="@+id/txtSignUp1"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_29pxh"
                    android:layout_marginTop="@dimen/_9pxv"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:translationX="@dimen/_24pxh"
                    android:text="@{signUpVM.signUpModel.txtSignUp1}"
                    app:layout_constraintEnd_toStartOf="@+id/imageYoundmanstand"
                    app:layout_constraintHorizontal_bias="0.07"
                    app:layout_constraintStart_toStartOf="@+id/imageVector4"
                    app:layout_constraintTop_toBottomOf="@+id/imageRectangle2"
                    style="@style/txtInterbold60" tools:text="@string/lbl_sign_up2"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
