<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="startVM" type="com.application.app.modules.start.data.viewmodel.StartVM"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintGroup16"
        android:layout_height="match_parent"
        android:layout_width="match_parent" style="@style/groupStylewhite_A700">

        <ImageView
            android:id="@+id/imageVector2"
            android:layout_width="@dimen/_425pxh"
            android:layout_height="327dp"
            android:scaleType="fitXY"
            android:src="@drawable/img_vector2"
            android:translationX="-4dp"
            app:layout_constraintBottom_toTopOf="@+id/txtWelcomeTo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.42"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.9987923" />

        <View
            android:background="@drawable/rectangle_bg_bluegray_800_radius_27_5"
            android:id="@+id/viewEllipse1"
            android:layout_height="@dimen/_55pxv"
            android:layout_marginEnd="@dimen/_141pxh"
            android:layout_marginStart="@dimen/_59pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="@dimen/_57pxh"
            app:layout_constraintEnd_toStartOf="@+id/viewEllipse4"
            app:layout_constraintHorizontal_bias="0.27"
            app:layout_constraintStart_toStartOf="@+id/imageGirlandboysi" app:layout_constraintTop_toTopOf="@+id/imageVector2"/>
        <View
            android:background="@drawable/rectangle_bg_bluegray_800_radius_14_5"
            android:id="@+id/viewEllipse5"
            android:layout_height="@dimen/_29pxh"
            android:layout_marginBottom="@dimen/_49pxv"
            android:layout_marginEnd="@dimen/_13pxh"
            android:layout_marginStart="@dimen/_138pxh"
            android:layout_width="@dimen/_29pxh"
            app:layout_constraintBottom_toBottomOf="@+id/viewEllipse3"
            app:layout_constraintEnd_toEndOf="@+id/imageRectangle2"
            app:layout_constraintHorizontal_bias="0.64"
            app:layout_constraintStart_toStartOf="@+id/imageRectangle2" app:layout_constraintTop_toBottomOf="@+id/imageRectangle2"/>
        <View
            android:background="@drawable/rectangle_bg_bluegray_800_radius_39"
            android:id="@+id/viewEllipse3"
            android:layout_height="@dimen/_78pxv"
            android:layout_marginBottom="@dimen/_57pxv"
            android:layout_marginStart="@dimen/_54pxh"
            android:layout_width="@dimen/_78pxh"
            app:layout_constraintBottom_toBottomOf="@+id/imageVector2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.56"
            app:layout_constraintStart_toEndOf="@+id/imageRectangle2" app:layout_constraintTop_toBottomOf="@+id/imageRectangle2"/>
        <View
            android:background="@drawable/rectangle_bg_bluegray_800_radius_40_5"
            android:id="@+id/viewEllipse2"
            android:layout_height="@dimen/_81pxv"
            android:layout_marginBottom="@dimen/_12pxv"
            android:layout_marginEnd="@dimen/_32pxh"
            android:layout_marginStart="@dimen/_12pxh"
            android:layout_marginTop="@dimen/_12pxv"
            android:layout_width="@dimen/_84pxh"
            app:layout_constraintBottom_toBottomOf="@+id/imageRectangle2"
            app:layout_constraintEnd_toStartOf="@+id/imageRectangle2"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="@+id/imageVector2" app:layout_constraintTop_toBottomOf="@+id/viewEllipse1"/>
        <View
            android:background="@drawable/rectangle_bg_bluegray_800_radius_54"
            android:id="@+id/viewEllipse4"
            android:layout_height="@dimen/_108pxv"
            android:layout_marginBottom="@dimen/_60pxv"
            android:layout_width="@dimen/_105pxh"
            app:layout_constraintBottom_toBottomOf="@+id/viewEllipse2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/imageRectangle2" app:layout_constraintTop_toTopOf="parent"/>
        <ImageView android:id="@+id/imageRectangle1"
            android:layout_height="@dimen/_70pxh"
            android:layout_marginBottom="@dimen/_59pxv"
            android:layout_marginEnd="@dimen/_82pxh"
            android:layout_marginStart="@dimen/_105pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="@dimen/_227pxh"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtAnswerTheQuiz"
            imageRes="@{@drawable/img_rectangle1}" tools:src="@drawable/img_rectangle1"/>
        <TextView android:ellipsize="end" android:gravity="center"
            android:id="@+id/txtGetStarted"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_22pxv"
            android:layout_marginEnd="@dimen/_47pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_13pxv"
            android:layout_width="0dp" android:singleLine="true"
            android:text="@{startVM.startModel.txtGetStarted}"
            app:layout_constraintBottom_toBottomOf="@+id/imageRectangle1"
            app:layout_constraintEnd_toEndOf="@+id/imageRectangle1"
            app:layout_constraintStart_toStartOf="@+id/imageRectangle1"
            app:layout_constraintTop_toTopOf="@+id/imageRectangle1"
            style="@style/txtInterbold28" tools:text="@string/lbl_get_started"/>
        <ImageView android:id="@+id/imageRectangle2"
            android:layout_height="@dimen/_160pxh"
            android:layout_marginStart="@dimen/_18pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="@dimen/_180pxh"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toStartOf="@+id/viewEllipse4"
            app:layout_constraintHorizontal_bias="0.31"
            app:layout_constraintStart_toStartOf="@+id/viewEllipse1"
            app:layout_constraintTop_toTopOf="@+id/imageVector2"
            imageRes="@{@drawable/img_rectangle2}" tools:src="@drawable/img_rectangle2"/>
        <ImageView android:id="@+id/imageGirlandboysi"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/_39pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="0dp" android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/txtAnswerTheQuiz"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.64"
            app:layout_constraintStart_toStartOf="@+id/viewEllipse2"
            app:layout_constraintTop_toTopOf="@+id/viewEllipse1"
            app:layout_constraintWidth_percent="0.87439615"
            imageRes="@{@drawable/img_girlandboysi}" tools:src="@drawable/img_girlandboysi"/>
        <TextView android:ellipsize="end" android:id="@+id/txtWelcomeTo"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_35pxh"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_143pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@{startVM.startModel.txtWelcomeTo}"
            app:layout_constraintEnd_toEndOf="@+id/txtQUIZAPP"
            app:layout_constraintHorizontal_bias="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageVector2"
            style="@style/txtInterbold24" tools:text="@string/lbl_welcome_to"/>

        <TextView
            android:id="@+id/txtQUIZAPP"
            style="@style/txtInterbold32"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginEnd="@dimen/_165pxh"
            android:layout_marginBottom="@dimen/_7pxv"
            android:ellipsize="end"
            android:singleLine="true"
            android:translationX="-24dp"
            android:text="@{startVM.startModel.txtQUIZAPP}"
            app:layout_constraintBottom_toBottomOf="@+id/imageGirlandboysi"
            app:layout_constraintEnd_toEndOf="@+id/imageGirlandboysi"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWelcomeTo"
            app:layout_constraintVertical_bias="0.416"
            tools:text="@string/lbl_quiz_app" />

        <TextView android:gravity="start"
            android:id="@+id/txtAnswerTheQuiz"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_12pxh"
            android:layout_marginStart="@dimen/_52pxh"
            android:layout_marginTop="@dimen/_3pxv"
            android:layout_width="0dp"
            android:text="@{startVM.startModel.txtAnswerTheQuiz}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageGirlandboysi"
            style="@style/txtInterregular16" tools:text="@string/msg_answer_the_quiz"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
